2000-04-01  Mo DeJong  <mdejong@redhat.com>

	* unix/kaffe_tests: removed useless file.

2000-04-01  Mo DeJong  <mdejong@redhat.com>

	* unix/Makefile.in: fixed up "make dists" rule.

2000-03-30  Mo DeJong  <mdejong@redhat.com>

	* changes.txt: updated contents as a result
	of back porting fixes to the 1.2 branch.

2000-03-29  Mo DeJong  <mdejong@redhat.com>

	* unix/configure.in: removed IRIX hack that was added
	on 2000-02-23 but in fact did not work.

2000-03-20 Mo DeJong  <mdejong@redhat.com>

	* src/tests/tcljava/tests/javabind/ActionEvent.java:
	* src/tests/tcljava/tests/javabind/ActionListener.java:
	* src/tests/tcljava/tests/javabind/Bind.java:
	* tests/tcljava/JavaBindCmd.test:
	* unix/Makefile.in
	Added new multi-threaded test case for the java::bind command.

2000-03-17 Mo DeJong  <mdejong@redhat.com>

	* tests/inprogress/Unicode.test: Added test cases
	for Jacl substitution and passing of strings from
	Java to Tcl.
	* src/jacl/tcl/lang/Parser.java:
	Fixed a horrible bug that caused \u1234 to be
	parsed as \u1234 + 4. The parser was off by one.

2000-03-17 Mo DeJong  <mdejong@redhat.com>

	* docs/cFunctions.html:
	* docs/TclJavaLib/TclInteger.htm:
	* src/jacl/tcl/lang/LindexCmd.java:
	* src/jacl/tcl/lang/LinsertCmd.java:
	* src/jacl/tcl/lang/LrangeCmd.java:
	* src/jacl/tcl/lang/LreplaceCmd.java:
	* src/jacl/tcl/lang/LsortCmd.java:
	* src/jacl/tcl/lang/StringCmd.java:
	* src/jacl/tcl/lang/Util.java:
	* src/tcljava/tcl/lang/TclInteger.java:
	* tests/tcl/lindex.test:
	* tests/tcl/linsert.test:
	* tests/tcl/lrange.test:
	* tests/tcl/lreplace.test:
	* tests/tcl/string.test:
	Renamed and moved the TclInteger.getForIndex() method
	to Util.getIntForIndex(). It is a
	mapping for the TclGetIntForIndex function
	which is private, so it did not belong
	in TclInteger. Along with this change, I
	updated the implementation of getIntForIndex
	so that it is compatible with Tcl 8.3, which
	also required adding the Util.checkBadOctal()